# amazon-prep

./: README.md  check_password.py  closet_destination.py  count_swap.py  pyproject.toml  reverse_array_queries.py  second_largest.py  two_sum.py
env/: pyvenv.cfg
